[package]
name = "dwm-claude"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dwm-claude"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
